# shitposts

./: README.md  setup.cfg
shitposts/: __init__.py  _endpoint.py  async_session.py  errors.py  session.py
