[metadata]
name = shitposts
version = attr: shitposts.__version__
description = Asynchronous wrapper for ShitpostAPI.
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@outlook.com
url = https://github.com/regulad/shitposts
download_url = https://codeload.github.com/regulad/shitposts/zip/refs/heads/main
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = GPLv3
keywords =
    async
    api

[options]
packages = shitposts
install_requires =
    aiohttp
    requests
    requests-toolbelt
